--- a/css/style.css
+++ b/css/style.css
@@ -51,14 +51,16 @@ p {
 }
 
 /* this is the hero image */
+
 .hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("./img/digital-marketing-meeting.jpg");
+    background-image: url("../img/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
+
 
 .float-left {
     float: left;
